# discord-organizer-bot

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.yaml
scripts/: dev_run.sh  install_service.sh
src/organizer/: __init__.py  backup.py  cli.py  config.py  discord_client.py  mapper.py  models.py  sync.py  vault.py
tests/: conftest.py  test_backup.py  test_config.py  test_mapper.py  test_models.py  test_sync.py  test_vault.py
tests/fixtures/sample_vault/concepts/: notes.md
tests/fixtures/sample_vault/daily/2026-06-16/: notes.md
tests/fixtures/sample_vault/daily/2026-06-17/: notes.md
tests/fixtures/sample_vault/projects/: readme.md
tests/fixtures/sample_vault/reports/: summary.md
